# lean4TheWin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Lean4thewin.lean  README.md  book.toml  lake-manifest.json  lakefile.toml
.github/workflows/: mdbook.yml
Lean4thewin/: Basic.lean  ListIntro.lean  eval.lean  fun_functions.lean
interactive-lean-view/: Cargo.toml
interactive-lean-view/src/: main.rs
src/: SUMMARY.md  apply.md  classes.md  classical_logic.md  construction.md  defs.md  demo-interactive.md  eval.md  false.md  functions.md  get_lean.md  implicit.md  induction.md  introduction.md  lists.md  one_small_step.md  props.md  rewrite.md  structs.md  symbols.md  theorem.md  truth.md  types.md  universe.md  what_is_lean.md
theme/: highlight.js  lean-interactive-view.css  lean-interactive-view.js
