[workspace]
resolver = "3"
members = [
    ".",
    "./interactive-lean-view",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
mdbook-preprocessor = { version = "0.5.2" }
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
html-escape = "0.2"